# coconuts-adventure-android

./: .gitignore  .gitmodules  build.gradle
app/: build.gradle
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/android_app_glue/: android_native_app_glue.c
app/src/main/java/com/android/gl2jni/: Keep.java
app/src/main/java/com/coconutadventure/android/: CoconutsAdventureActivity.java  GL2JNIActivity.java
app/src/main/res/layout/: coconuts_adventure_activity.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
watcher/: index.js  package.json
